--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="welcome-thumb">
-            <img id="qr" src="" width="60%">
+            <img id="qr" src="foo.png" width="100%">
         </div>
     </section>
 </body>
