--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>QR Code Generator</title>
+    <title>Кодирование двоичного кода</title>
     <link href="style.css" rel="stylesheet">
     <script type="text/javascript" src="/eel.js"></script>
     <script type="text/javascript" src="main.js"></script>
@@ -19,21 +19,21 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 col-md">
                     <div class="wellcome-heading">
-                        <h2>Code Generator</h2>
-                        <h3>QR</h3>
-                        <p>Turn any piece of text into a QR code.</p>
+                        <h2>Кодирование</h2>
+                        
+                        <p>Введите двоичный код:</p>
                     </div>
                     <div class="get-start-area">
                         <form class="form-inline">
-                            <input type="text" id="data" class="form-control email" placeholder="Enter text">
-                            <input type="button" class="submit" value="Get QR Code" onclick="generateQRCode()">
+                            <input type="text" id="data" class="form-control email" placeholder="Код">
+                            <input type="button" class="submit" value="Кодировать" onclick="generateQRCode()">
                         </form>
                     </div>
                 </div>
             </div>
         </div>
         <div class="welcome-thumb">
-            <img id="qr" src="foo.png" width="100%">
+            <img id="qr" src="" width="100%">
         </div>
     </section>
 </body>
